[gd_scene load_steps=4 format=3 uid="uid://blk02h2fepm4b"]

[ext_resource type="Theme" uid="uid://cxwyw4x8t5r2v" path="res://assets/themes/default_theme.tres" id="1_lxcwl"]
[ext_resource type="Script" path="res://scenes/core/start_menu.gd" id="2_tg1ip"]
[ext_resource type="Texture2D" uid="uid://cobb7g2kf34j0" path="res://assets/sprites/ui/controls.png" id="3_cm82m"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -105.0
offset_right = 1002.0
offset_bottom = 645.0
theme = ExtResource("1_lxcwl")
script = ExtResource("2_tg1ip")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 103.0
offset_right = 603.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.704067, 0.43784, 0.601708, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 98.0
offset_right = 603.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Rex-terminator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
text = "Start
"

[node name="ShowControls" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
text = "Controls"

[node name="ShowHowTo" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
text = "How to play"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
text = "Quit
"

[node name="ContolsImage" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 356.0
offset_top = 102.0
offset_right = 1256.0
offset_bottom = 702.0
texture = ExtResource("3_cm82m")

[node name="HowToText" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 424.0
offset_top = 504.0
offset_right = 848.0
offset_bottom = 735.0
scale = Vector2(1.87802, 1.56437)
text = "You play as Rex-Terminator, and you goal is to run, jump, and dash your way up the wall of the house, find the termite queen, and eliminate her."
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/ShowControls" to="." method="_on_show_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/ShowHowTo" to="." method="_on_show_how_to_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
